<resources>
    # activity_logowanie
    <string name="app_name">MagnetoDocs</string>
    <string name="logowanie">Zaloguj się</string>
    <string name="rejestracja">Rejestracja</string>

    # activity_rejestracja
    <string name="zarejestruj">Zarejestruj się</string>
    <string name="title_activity_rejestracja">Rejestracja</string>


    <string name="navigation_drawer_open">Otwórz drawer</string>
    <string name="navigation_drawer_close">Zamknij drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MagnetoDocs</string>
    # app_bar_menu
    <string name="opisProgramu">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam. Quisque semper justo at risus. Donec venenatis, turpis vel hendrerit interdum, dui ligula ultricies purus.</string>
    <string name="wybierzPlik">Wybierz plik</string>
    <string name="wgraj">Wgraj</string>
    <string name="sprawdz">Sprawdź</string>


    <string name="chooser_title">Lorem ipsum</string>
    <string name="choose_file">Wybierz plik</string>
    <string name="internal_storage">Pamięć wewnętrzna</string>
    <string name="empty_directory">Pusty folder</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="error_selecting_file">Błąd zaznaczania pliku</string>

    # activity_archiwum

    <string name="title_activity_archwiwum">Archiwum</string>


    # activity_moj_profil
    <string name="title_activity_moj_profil">Mój profil</string>
    <string name="zmianaHasla">Zmiana hasła</string>
    <string name="aktualneHaslo">Aktualne hasło:</string>
    <string name="noweHaslo">Nowe hasło:</string>
    <string name="zmienHaslo">Zmień hasło</string>
    <string name="zmianaEmail">Zmiana adresu e-mail</string>
    <string name="email">E-mail:</string>
    <string name="zmienEmail">Zmien e-mail</string>
    <string name="usunKonto">Usuń konto</string>
    <string name="title_activity_szczegoly_dokumentu">Szczegóły dokumentu</string>
    <string name="title_activity_szczegoly_sprawdzonego_pliku">Szczegóły dokumentu
    </string>

</resources>
