<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dawid.wtistemple.MojProfilActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            android:text="@string/zmianaHasla" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aktualneHaslo"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/aktualneHasloET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="16dp"
            android:inputType="textPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noweHaslo"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/noweHasloET"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noweHaslo"
            android:textSize="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"/>


        <EditText
            android:id="@+id/noweHaslo1ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textSize="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/zmienHasloBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zmienHaslo"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:onClick="zmienHaslo"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zmianaEmail"
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/zmienEmailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="16dp"
            android:inputType="textPersonName"

            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/zmienEmailBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zmienEmail"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:onClick="zmienEmail"/>


        <Button
            android:id="@+id/usunKontoBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usunKonto"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:onClick="usunKonto"/>

    </LinearLayout>
</ScrollView>






</android.support.design.widget.CoordinatorLayout>
